--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ services:
     build: .
     ports:
       - "8001:5000"
+    volumes:
+      - .:/code
+    environment:
+      FLASK_ENV: development
   redis:
     image: "redis:alpine"
 
